# Slid

./: .gitignore  README.md  package-lock.json  package.json
slid/: DESIGN.md  README.md  index.html  jest.config.ts  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
slid-api/: .env.example  Cargo.toml  PROMPTS.md  README.md
slid-api/migration/src/: lib.rs
slid-api/src/: lib.rs  main.rs
slid-api/src/auth/: mod.rs
slid-api/src/routes/: ai.rs  auth.rs  decks.rs  exports.rs  images.rs  index.rs  shares.rs
slid-api/src/schema/: mod.rs
slid-api/src/services/: ai_orchestrator.rs  exporter.rs  image_provider.rs
slid-schema/: README.md  jest.config.ts  package.json
slid-schema/src/: index.ts
slid-schema/src/tokens/: index.ts
slid-schema/test/: layouts.test.ts  schema.test.ts
slid/src/: App.vue  main.ts
slid/src/ai/: api-client.ts  suggestions.ts
slid/src/design/: index.css  theme.ts
slid/src/stores/: brand.ts  deck.ts  sampleDeck.ts  suggestions.ts  theme.ts
slid/src/views/: Home.vue  Render.vue
slid/test/: stores.test.ts
slidesmith/: DESIGN.md  README.md  index.html  jest.config.ts  package.json  tailwind.config.ts  tsconfig.node.json
slidesmith-api/: .env.example  Cargo.toml  PROMPTS.md  README.md  Rocket.toml
slidesmith-api/migration/: Cargo.toml
slidesmith-api/migration/src/: lib.rs  m20260101_000001_create_users.rs  (+2 more)
slidesmith-api/src/: errors.rs  lib.rs  main.rs
slidesmith-schema/: README.md  package.json  tsconfig.json
slidesmith-schema/test/: tokens.test.ts
slidesmith/test/: stores.test.ts
(+42 files in other folders)
