[package]
name = "slid-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AI-powered slide deck generation REST API server in Rust with Rocket, SeaORM and JWT."
authors = ["Your Name <hello@yoursite.dev>"]

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
mockall = "0.12"
serde_json = "1.0"

[workspace]
members = [".", "migration"]
